syntax = "proto3";
package svc;

option go_package = "github.com/autonomouskoi/akcore/svc/pb/svc";

enum MessageType {
    UNSPECIFIED         = 0;
    HAS_TOPIC_REQ       = 1;
    HAS_TOPIC_RESP      = 2;
    SUBSCRIBE_REQ       = 3;
    SUBSCRIBE_RESP      = 4;
    UNSUBSCRIBE_REQ     = 5;
    UNSUBSCRIBE_RESP    = 6;
    KV_SET_REQ          = 7;
    KV_SET_RESP         = 8;
    KV_GET_REQ          = 9;
    KV_GET_RESP         = 10;
    KV_LIST_REQ         = 11;
    KV_LIST_RESP        = 12;
    KV_DELETE_REQ       = 13;
    KV_DELETE_RESP      = 14;
    LOG_SEND_REQ        = 15;
    LOG_SEND_RESP       = 16; 

    WEBCLIENT_STATIC_DOWNLOAD_REQ  = 17;
    WEBCLIENT_STATIC_DOWNLOAD_RESP = 18;

    TEMPLATE_RENDER_REQ  = 19;
    TEMPLATE_RENDER_RESP = 20;
}

message HasTopicRequest {
    string  topic = 1;
    int32   timeout_ms = 2;
}
message HasTopicResponse {
    string  topic     = 1;
    bool    has_topic = 2;
}

message SubscribeRequest {
    string  topic = 1;
}
message SubscribeResponse {}

message UnsubscribeRequest {
    string  topic = 1;
}
message UnsubscribeResponse {}

message KVSetRequest {
    bytes  key   = 1;
    bytes  value = 2;
}
message KVSetResponse {}

message KVGetRequest {
    bytes  key = 1;
}
message KVGetResponse {
    bytes  key   = 1;
    bytes  value = 2;
}

message KVListRequest {
    bytes   prefix = 1;
    uint32  offset = 2;
    uint32  limit  = 3;
}
message KVListResponse {
    repeated  bytes   keys          = 1;
              bytes   prefix        = 2;
              uint32  total_matches = 3;
              uint32  offset        = 4;
              uint32  limit         = 5;
}

message KVDeleteRequest {
    bytes  key = 1;
}
message KVDeleteResponse {}